--- a/gnome-shell/widgets/_message-list.scss
+++ b/gnome-shell/widgets/_message-list.scss
@@ -5,13 +5,24 @@
 .message-list {
   width: 35em;
   max-height: 6 * 5em;
-  padding: 0 $base_padding * 2;
-  padding-top: 1em;
-  border: solid $borders_color;
+  padding: 0 $base_padding;
+  padding-top: $base_padding;
+  border: solid transparent;
 
   // padding and margins to account for scrollbar
-  &:ltr {margin-left: 0; margin-right: $base_margin; padding-right: $base_padding; border-right-width: 1px; }
-  &:rtl {margin-right: 0; margin-left: $base_margin; padding-left: $base_padding; border-left-width: 1px; }
+  &:ltr {
+    margin-left: 0;
+    margin-right: $base_margin;
+    padding-right: $base_padding;
+    border-right-width: 1px;
+  }
+
+  &:rtl {
+    margin-right: 0;
+    margin-left: $base_margin; 
+    padding-left: $base_padding;
+    border-left-width: 1px;
+  }
 
   .message-list-placeholder { 
     @extend %title_2;
@@ -29,11 +40,11 @@
 
 .message-list-sections {
   spacing: $base_spacing;
-  margin: 0 $base_margin * 4; // to account for scrollbar
+  margin: 0 $base_margin; // to account for scrollbar
 
   // to account for scrollbar
-  &:ltr {margin-right: $base_margin * 4; }
-  &:rtl {margin-left: $base_margin * 4;}
+  &:ltr {margin-right: $base_margin;}
+  &:rtl {margin-left: $base_margin;}
 }
 
 .message-list-section,
@@ -137,12 +148,22 @@
   // close button
   .message-close-button {
     color: lighten($fg_color, 15%);
-    background-color: transparent;
     border-radius: $base_border_radius;
     padding: $base_padding - 1px;
     margin: 1px;
-    &:hover {background-color: darken($fg_color, 10%);}
-    &:active {background-color: darken($fg_color, 20%);}
+    background: transparent;
+
+    &:focus, &:hover {
+      background-gradient-direction: vertical;
+      background-gradient-start: $viva_gradient_2;
+      background-gradient-end: $viva_gradient_1;
+    }
+
+    &:active {
+      background-gradient-direction: vertical;
+      background-gradient-start: $viva_color1;
+      background-gradient-end: $viva_color2;
+    }
   }
 
   // body
